separated Dockerfiles for dev & prod; improved README notes

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,5 @@
-# database.yml variables:
-DATABASE_NAME=goggles_development
-DATABASE_USER=root
-DATABASE_PASSWORD=<YOUR_SUPER_SECRET_PWD_HERE>
+# For local builds, you'll need to set these in your '.env' file:
+MYSQL_ROOT_PASSWORD=<YOUR_SUPER_SECRET_MYSQL_PWD_HERE>
 
-# MySQL configuration during image build:
-MYSQL_ROOT_PASSWORD=<YOUR_SUPER_SECRET_PWD_HERE>
-
-# Connect to the DB container using its network name & its internal port:
-DATABASE_HOST=goggles-db
-DATABASE_PORT=3306
+# (For the Docker Registry builds, the environment settings of the
+#  autobuilds feature already takes care of these)
