--- a/config/database.docker.yml
+++ b/config/database.docker.yml
@@ -3,7 +3,7 @@ default: &default
   encoding: utf8mb4
   database: <%= ENV.fetch("DATABASE_NAME") { 'goggles' } %>
   username: <%= ENV.fetch("DATABASE_USER") { 'root' } %>
-  password: <%= ENV.fetch("DATABASE_PASSWORD") { '' } %>
+  password: <%= ENV.fetch("MYSQL_ROOT_PASSWORD") { '' } %>
   host: <%= ENV.fetch("DATABASE_HOST") { 'localhost' } %>
   port: <%= ENV.fetch("DATABASE_PORT") { 3306 } %>
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
