--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -13,8 +13,11 @@ default: &default
   adapter: mysql2
   encoding: utf8mb4
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: root
+  username: <%= ENV.fetch("DATABASE_USER") { 'root' } %>
+  # Use socket for localhost connections only; otherwise, use 'host' or 'url' parameters:
   socket: /var/run/mysqld/mysqld.sock
+  # host: <%= ENV.fetch("DATABASE_HOST") { 'localhost' } %>
+  # port: <%= ENV.fetch("DATABASE_PORT") { 3306 } %>
 
 development:
   <<: *default
@@ -51,5 +54,4 @@ test:
 production:
   <<: *default
   database: goggles
-  username: <%= ENV['GOGGLES_DB_USER'] %>
-  password: <%= ENV['GOGGLES_DB_PASSWORD'] %>
+  password: <%= ENV.fetch("MYSQL_ROOT_PASSWORD") { '' } %>
