--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,16 +4,14 @@ services:
   app:
     build:
       context: .
-      dockerfile: Dockerfile
-    image: goggles-api:0.1
+      dockerfile: Dockerfile.dev
+    image: steveoro/goggles-api:dev-0.1.1
     depends_on:
       - goggles-db
     container_name: goggles-api
     restart: always
     ports:
       - '8080:8080'
-    environment:
-      RAILS_ENV: development
     env_file:
       - .env
 
