--- a/config/database.semaphore_2.yml
+++ b/config/database.semaphore_2.yml
@@ -1,11 +1,12 @@
-# Allow full customization when building a new Docker image:
+# Semaphore 2.0 uses a password-less access for the ubuntu1804 VM running the MySQL service:
 default: &default
   adapter: mysql2
   encoding: utf8mb4
-  database: <%= ENV.fetch("DATABASE_NAME") { 'goggles' } %>
+  database: <%= ENV.fetch("DATABASE_NAME") { 'goggles_test' } %>
   username: <%= ENV.fetch("DATABASE_USER") { 'root' } %>
-  password: <%= ENV.fetch("MYSQL_ROOT_PASSWORD") { '' } %>
-  host: <%= ENV.fetch("DATABASE_HOST") { 'localhost' } %>
+  password:
+  socket: /var/run/mysqld/mysqld.sock
+  host: <%= ENV.fetch("DATABASE_HOST") { '127.0.0.1' } %>
   port: <%= ENV.fetch("DATABASE_PORT") { 3306 } %>
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
@@ -13,7 +14,4 @@ development:
   <<: *default
 
 test:
-  <<: *default
-
-production:
   <<: *default
