--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -15,7 +15,7 @@ global_job_config:
       - 'curl -L -o db/dump/test.sql.bz2 "https://github.com/steveoro/goggles_admin/raw/master/db/dump/development.sql.bz2"'
       - gem i bundler
       - bundle install
-      - mkdir tmp
+      - mkdir -pv tmp
       # - cache store
       - 'RAILS_ENV=test bin/rails db:rebuild from=test to=test'
       - 'RAILS_ENV=test bin/rails db:migrate'
