--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,6 +14,8 @@ inherit_from: .rubocop_todo.yml
 AllCops:
   NewCops: enable
   TargetRubyVersion: 2.6.3
+  Exclude:
+    - 'db/schema.rb'
 
 # Cop supports --auto-correct.
 # Configuration parameters: AutoCorrect, AllowHeredoc, AllowURI, URISchemes, IgnoreCopDirectives, IgnoredPatterns.
