--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -4,28 +4,30 @@ agent:
   machine:
     type: e1-standard-2
     os_image: ubuntu1804
+
+fail_fast:
+  stop:
+    when: 'true'
+
 global_job_config:
   # Connect secrets to all jobs in the pipeline:
   # (actual values can be edited on Semaphore 2.0 org dashboard)
   secrets:
     - name: DockerHub-steveoro-login
+
   # Execute at the start of every job in the pipeline:
   prologue:
     commands:
-      - checkout
-      # - cache restore
       - sem-version ruby 2.6.3
       - sem-service start mysql
-      - cp config/database.semaphore_2.yml config/database.yml
+      - checkout
       - echo $DOCKERHUB_PASSWORD | docker login --username "$DOCKERHUB_USERNAME" --password-stdin
       - echo $RAILS_MASTER_KEY > config/master.key
-      - 'curl -L -o db/dump/test.sql.bz2 "https://github.com/steveoro/goggles_admin/raw/master/db/dump/development.sql.bz2"'
+      - cp config/database.semaphore_2.yml config/database.yml
+      - mkdir -pv tmp
       - gem i bundler
       - bundle install
-      - mkdir -pv tmp
-      # - cache store
-      - 'RAILS_ENV=test bin/rails db:rebuild from=test to=test'
-      - 'RAILS_ENV=test bin/rails db:migrate'
+
 blocks:
   - name: Code scanning
     dependencies: []
@@ -35,12 +37,26 @@ blocks:
           commands:
             - bundle exec rubocop
             - bundle exec brakeman -A6q
+
   - name: RSpec tests
     dependencies:
       - Code scanning
     task:
+      prologue:
+        commands:
+          - 'curl -L -o db/dump/test.sql.bz2 "https://github.com/steveoro/goggles_admin/raw/master/db/dump/development.sql.bz2"'
+          - 'RAILS_ENV=test bin/rails app:db:rebuild from=test to=test'
+          - 'RAILS_ENV=test bin/rails db:migrate'
       jobs:
-        # Typically taken care by GogglesDb core tests:
+        - name: RSpec - commands
+          commands:
+            - 'bundle exec rspec -t type:command'
+
+        - name: RSpec - API/requests
+          commands:
+            - 'bundle exec rspec -t type:request'
+
+        # Not currently used:
         # - name: RSpec - models
         #   commands:
         #     - 'bundle exec rspec -t type:model'
@@ -53,13 +69,6 @@ blocks:
         # - name: RSpec - decorators
         #   commands:
         #     - 'bundle exec rspec -t type:decorator'
-        - name: RSpec - commands
-          commands:
-            - 'bundle exec rspec -t type:command'
-        - name: RSpec - API/requests
-          commands:
-            - 'bundle exec rspec -t type:request'
-        # Not currently used here:
         # - name: RSpec - controllers
         #   commands:
         #     - 'bundle exec rspec -t type:controller'
