--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -45,7 +45,7 @@ blocks:
       prologue:
         commands:
           - 'curl -L -o db/dump/test.sql.bz2 "https://github.com/steveoro/goggles_admin/raw/master/db/dump/development.sql.bz2"'
-          - 'RAILS_ENV=test bin/rails app:db:rebuild from=test to=test'
+          - 'RAILS_ENV=test bin/rails db:rebuild from=test to=test'
           - 'RAILS_ENV=test bin/rails db:migrate'
       jobs:
         - name: RSpec - commands
