--- a/config/database.semaphore_2.yml
+++ b/config/database.semaphore_2.yml
@@ -12,6 +12,8 @@ default: &default
 
 development:
   <<: *default
+  database: goggles_development
 
 test:
   <<: *default
+  database: goggles_test
