--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -14,36 +14,64 @@ global_job_config:
   # (actual values can be edited on Semaphore 2.0 org dashboard)
   secrets:
     - name: DockerHub-steveoro-login
+    - name: GogglesApi
 
   # Execute at the start of every job in the pipeline:
   prologue:
     commands:
-      - sem-version ruby 2.6.3
-      - sem-service start mysql
       - checkout
       - echo $DOCKERHUB_PASSWORD | docker login --username "$DOCKERHUB_USERNAME" --password-stdin
       - echo $RAILS_MASTER_KEY > config/master.key
-      - cp config/database.semaphore_2.yml config/database.yml
       - mkdir -pv tmp
-      - gem i bundler
-      - bundle install
+      # Use GogglesDb::VERSION as master reference here, or force a minor version change to rebuild the cache:
+      - cache restore bundle-1.20-$(checksum Gemfile.lock)
+
+      # - sem-version ruby 2.6.3
+      # - sem-service start mysql
+      # - checkout
+      # - echo $DOCKERHUB_PASSWORD | docker login --username "$DOCKERHUB_USERNAME" --password-stdin
+      # - echo $RAILS_MASTER_KEY > config/master.key
+      # - cp config/database.semaphore_2.yml config/database.yml
+      # - mkdir -pv tmp
+      # - gem i bundler
+      # - bundle install
 
 blocks:
+  - name: Bundle cache store
+    task:
+      jobs:
+        - name: Bundle with cache store
+          commands:
+            - sem-version ruby 2.6
+            # Bundler requires 'install' to run even though cache has been restored.
+            # Installation will not actually run and command and will finish quickly if the cache has been hit:
+            - bundle config set path 'vendor/bundle'
+            - bundle install
+            # Use this to log the actual bundle destination path for Semaphore 2.0 (currently uses Rbenv):
+            # - bundle info rake --path
+            # The cache will be updated with the new content just once for all blocks in the pipeline:
+            - cache store bundle-1.20-$(checksum Gemfile.lock) vendor/bundle
+
   - name: Code scanning
-    dependencies: []
     task:
       jobs:
         - name: check style + security
           commands:
+            - sem-version ruby 2.6
+            - bundle config set path 'vendor/bundle'
+            - bundle install
             - bundle exec rubocop
             - bundle exec brakeman -A6q
 
   - name: RSpec tests
-    dependencies:
-      - Code scanning
     task:
       prologue:
         commands:
+          - sem-version ruby 2.6
+          - sem-service start mysql
+          - bundle config set path 'vendor/bundle'
+          - bundle install
+          - cp config/database.semaphore_2.yml config/database.yml
           - 'curl -L -o db/dump/test.sql.bz2 "https://github.com/steveoro/goggles_admin/raw/master/db/dump/development.sql.bz2"'
           - 'RAILS_ENV=test bin/rails db:rebuild from=test to=test'
           - 'RAILS_ENV=test bin/rails db:migrate'
@@ -51,27 +79,43 @@ blocks:
         - name: RSpec - commands
           commands:
             - 'bundle exec rspec -t type:command'
+            - bash <(curl -s https://codecov.io/bash) -cF command
+            - bundle exec codeclimate-test-reporter
 
         - name: RSpec - API/requests
           commands:
             - 'bundle exec rspec -t type:request'
+            - bash <(curl -s https://codecov.io/bash) -cF request
+            - bundle exec codeclimate-test-reporter
 
         # Not currently used:
         # - name: RSpec - models
         #   commands:
         #     - 'bundle exec rspec -t type:model'
+        #     - bash <(curl -s https://codecov.io/bash) -cF model
+        #     - bundle exec codeclimate-test-reporter
         # - name: RSpec - strategies
         #   commands:
         #     - 'bundle exec rspec -t type:strategy'
+        #     - bash <(curl -s https://codecov.io/bash) -cF strategy
+        #     - bundle exec codeclimate-test-reporter
         # - name: RSpec - validators
         #   commands:
         #     - 'bundle exec rspec -t type:validator'
+        #     - bash <(curl -s https://codecov.io/bash) -cF validator
+        #     - bundle exec codeclimate-test-reporter
         # - name: RSpec - decorators
         #   commands:
         #     - 'bundle exec rspec -t type:decorator'
+        #     - bash <(curl -s https://codecov.io/bash) -cF decorator
+        #     - bundle exec codeclimate-test-reporter
         # - name: RSpec - controllers
         #   commands:
         #     - 'bundle exec rspec -t type:controller'
+        #     - bash <(curl -s https://codecov.io/bash) -cF controller
+        #     - bundle exec codeclimate-test-reporter
         # - name: RSpec - views
         #   commands:
         #     - 'bundle exec rspec -t type:view'
+        #     - bash <(curl -s https://codecov.io/bash) -cF view
+        #     - bundle exec codeclimate-test-reporter
