--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -3,8 +3,8 @@ LABEL AUTHOR=steve.alloro@gmail.com version="0.1.1"
 
 ENV BUNDLER_VERSION=2.0.2 \
     INSTALL_PATH=/app \
-    RAILS_ENV=development \
-    DATABASE_NAME=goggles_development \
+    RAILS_ENV=test \
+    DATABASE_NAME=goggles_test \
     DATABASE_HOST=goggles-db \
     DATABASE_PORT=3306 \
     DATABASE_USER=root
@@ -55,4 +55,4 @@ COPY ./config/database.docker.yml ./config/database.yml
 RUN bundle check || bundle install
 RUN yarn install --check-files
 
-ENTRYPOINT ["./entrypoints/docker.dev.sh"]
+ENTRYPOINT ["./entrypoints/docker.test.sh"]
