--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -4,12 +4,12 @@ services:
   app:
     build:
       context: .
-      dockerfile: Dockerfile.prod
-    image: steveoro/goggles-api:latest
+      dockerfile: Dockerfile.test
+    image: steveoro/goggles-api:test-0.1.1
     depends_on:
       - goggles-db
     container_name: goggles-api
-    restart: always
+    restart: "no"
     ports:
       - '8080:8080'
     env_file:
@@ -22,7 +22,7 @@ services:
       - '33060:3306'
     env_file:
       - .env
-    restart: always
+    restart: "no"
     volumes:
       - type: volume
         source: db_data
