--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -8,6 +8,9 @@ agent:
 fail_fast:
   stop:
     when: 'true'
+auto_cancel:
+  running:
+    when: 'true'
 
 global_job_config:
   # Connect secrets to all jobs in the pipeline:
@@ -23,18 +26,10 @@ global_job_config:
       - echo $DOCKERHUB_PASSWORD | docker login --username "$DOCKERHUB_USERNAME" --password-stdin
       - echo $RAILS_MASTER_KEY > config/master.key
       - mkdir -pv tmp
+      # Make sure we are using Bundler 2.1.4:
+      - gem i bundler
       # Use GogglesDb::VERSION as master reference here, or force a minor version change to rebuild the cache:
       - cache restore bundle-1.20-$(checksum Gemfile.lock)
-
-      # - sem-version ruby 2.6.3
-      # - sem-service start mysql
-      # - checkout
-      # - echo $DOCKERHUB_PASSWORD | docker login --username "$DOCKERHUB_USERNAME" --password-stdin
-      # - echo $RAILS_MASTER_KEY > config/master.key
-      # - cp config/database.semaphore_2.yml config/database.yml
-      # - mkdir -pv tmp
-      # - gem i bundler
-      # - bundle install
 
 blocks:
   - name: Bundle cache store
@@ -119,3 +114,9 @@ blocks:
         #     - 'bundle exec rspec -t type:view'
         #     - bash <(curl -s https://codecov.io/bash) -cF view
         #     - bundle exec codeclimate-test-reporter
+
+promotions:
+  - name: Docker images
+    pipeline_file: semaphore_docker_build.yml
+    auto_promote:
+      when: branch = 'master' AND result = 'passed'
