--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -41,7 +41,7 @@ blocks:
             # Bundler requires 'install' to run even though cache has been restored.
             # Installation will not actually run and command and will finish quickly if the cache has been hit:
             - bundle config set path 'vendor/bundle'
-            - bundle install
+            - GIT_LFS_SKIP_SMUDGE=1 bundle install
             # Use this to log the actual bundle destination path for Semaphore 2.0 (currently uses Rbenv):
             # - bundle info rake --path
             # The cache will be updated with the new content just once for all blocks in the pipeline:
@@ -54,7 +54,7 @@ blocks:
           commands:
             - sem-version ruby 2.6
             - bundle config set path 'vendor/bundle'
-            - bundle install
+            - GIT_LFS_SKIP_SMUDGE=1 bundle install
             - bundle exec rubocop
             - bundle exec brakeman -c .brakeman.cfg
 
@@ -65,7 +65,7 @@ blocks:
           - sem-version ruby 2.6
           - sem-service start mysql
           - bundle config set path 'vendor/bundle'
-          - bundle install
+          - GIT_LFS_SKIP_SMUDGE=1 bundle install
           - cp config/database.semaphore_2.yml config/database.yml
           - 'curl -L -o db/dump/test.sql.bz2 "https://github.com/steveoro/goggles_db/raw/master/spec/dummy/db/dump/test.sql.bz2"'
           - 'RAILS_ENV=test bin/rails db:rebuild from=test to=test'
