fixed SimpleCov to v. 0.13 which doesn't seem to break parsing in CodeClimate test reporter

--- a/codecov.yml
+++ b/codecov.yml
@@ -16,6 +16,16 @@ parsers:
       method: no
       macro: no
 
+flags:
+  command:
+    paths:
+      - app/commands/*
+    carryforward: true
+  request:
+    paths:
+      - app/api/*
+    carryforward: true
+
 comment:
   layout: "reach,diff,flags,files,footer"
   behavior: default
