--- a/.semaphore/semaphore_coverage_upload.yml
+++ b/.semaphore/semaphore_coverage_upload.yml
@@ -25,7 +25,8 @@ global_job_config:
       - mkdir -pv tmp coverage
       - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
       - chmod +x ./cc-test-reporter
-      - cache restore coverage-$(checksum spec/**/{,**/}*.rb)
+      - cache restore cc-command-goggles_api
+      - cache restore cc-request-goggles_api
 
 blocks:
   - name: Code coverage upload
