--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -3,7 +3,7 @@ version: '3.7'
 services:
   goggles-db:
     image: mariadb:latest
-    container_name: goggles-db
+    container_name: goggles-db.staging
     ports:
       - '33060:3306'
     env_file:
@@ -20,7 +20,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.staging
-    image: steveoro/goggles-api:staging-0.1.7
+    image: steveoro/goggles-api:staging-0.1.076
     depends_on:
       - goggles-db
     container_name: goggles-api.staging
@@ -29,6 +29,9 @@ services:
       - '8080:8080'
     env_file:
       - .env
+    volumes:
+      - "~/Projects/goggles_api/db/dump:/app/db/dump"
+      - "~/Projects/goggles_api/config/master.key:/app/config/master.key"
 
 volumes:
   db_data:
