--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -56,7 +56,7 @@ COPY . ./
 RUN bundle config build.nokogiri --use-system-libraries
 COPY ./config/database.docker.yml ./config/database.yml
 
-RUN bundle check || bundle install --without=development test
+RUN bundle check || bundle install
 RUN yarn install --check-files
 
 ENTRYPOINT ["./entrypoints/docker.prod.sh"]
