--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -6,34 +6,30 @@ services:
     container_name: goggles-db.dev
     ports:
       - '33060:3306'
-    env_file:
-      - .env
     restart: always
     volumes:
-      - type: volume
-        source: db_data
-        target: /var/lib/mysql
-        volume:
-          nocopy: true
+      - "~/Projects/goggles_deploy/db.prod:/var/lib/mysql"
 
-  app:
+  api:
     build:
       context: .
       dockerfile: Dockerfile.dev
-    image: steveoro/goggles-api:dev-0.1.90
+    image: "steveoro/goggles-api:dev-${TAG}"
     depends_on:
       - goggles-db
     container_name: goggles-api.dev
-    restart: always
     ports:
       - '8081:8081'
-    env_file:
-      - .env
+    restart: always
     volumes:
-      - "~/Projects/goggles_api/db/dump:/app/db/dump"
-      - "~/Projects/goggles_api/config/master.key:/app/config/master.key"
+      - "~/Projects/goggles_deploy/db.prod:/var/lib/mysql"
+      - "~/Projects/goggles_deploy/backups:/app/db/dump"
+      - "~/Projects/goggles_deploy/master-api.key:/app/config/master.key"
+
+networks:
+  default:
+    name: dev
 
 volumes:
-  db_data:
   gem_cache:
   node_modules:
