--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -1,39 +1,35 @@
 version: '3.7'
 
 services:
-  goggles-db:
+  goggles-db.staging:
     image: mariadb:latest
     container_name: goggles-db.staging
     ports:
-      - '33060:3306'
-    env_file:
-      - .env
+      - '33070:3306'
     restart: always
     volumes:
-      - type: volume
-        source: db_data
-        target: /var/lib/mysql
-        volume:
-          nocopy: true
+      - "~/Projects/goggles_deploy/db.staging:/var/lib/mysql"
 
-  app:
+  api.staging:
     build:
       context: .
       dockerfile: Dockerfile.staging
-    image: steveoro/goggles-api:staging-0.1.90
+    image: "steveoro/goggles-api:staging-${TAG}"
     depends_on:
-      - goggles-db
+      - goggles-db.staging
     container_name: goggles-api.staging
-    restart: always
     ports:
-      - '8081:8081'
-    env_file:
-      - .env
+      - '9081:8081'
+    restart: always
     volumes:
-      - "~/Projects/goggles_api/db/dump:/app/db/dump"
-      - "~/Projects/goggles_api/config/master.key:/app/config/master.key"
+      - "~/Projects/goggles_deploy/db.staging:/var/lib/mysql"
+      - "~/Projects/goggles_deploy/backups:/app/db/dump"
+      - "~/Projects/goggles_deploy/master-api.key:/app/config/master.key"
+
+networks:
+  default:
+    name: staging
 
 volumes:
-  db_data:
   gem_cache:
   node_modules:
