--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -116,4 +116,4 @@ promotions:
   - name: Docker images
     pipeline_file: semaphore_docker_build.yml
     auto_promote:
-      when: branch = 'master' AND result = 'passed'
+      when: result = 'passed'
