--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -4,6 +4,8 @@ services:
   goggles-db.staging:
     image: mariadb:latest
     container_name: goggles-db.staging
+    env_file:
+      - .env
     ports:
       - '33070:3306'
     restart: always
@@ -18,6 +20,8 @@ services:
     depends_on:
       - goggles-db.staging
     container_name: goggles-api.staging
+    env_file:
+      - .env
     ports:
       - '9081:8081'
     restart: always
