made 'latest' Docker build to use staging config instead of prod

--- a/.semaphore/semaphore_docker_build.yml
+++ b/.semaphore/semaphore_docker_build.yml
@@ -33,7 +33,7 @@ global_job_config:
 
 blocks:
   # Skip if there's a tag
-  - name: Build latest image
+  - name: Build latest image (staging)
     skip:
       when: "tag =~ '.*'"
     task:
@@ -44,7 +44,7 @@ blocks:
       jobs:
         - name: Docker latest
           commands:
-            - 'docker build -t $DOCKERHUB_USERNAME/goggles-api:latest --cache-from=$DOCKERHUB_USERNAME/goggles-api:latest -f Dockerfile.prod .'
+            - 'docker build -t $DOCKERHUB_USERNAME/goggles-api:latest --cache-from=$DOCKERHUB_USERNAME/goggles-api:latest -f Dockerfile.staging .'
             - 'docker push $DOCKERHUB_USERNAME/goggles-api:latest'
 
   # Run only if there's a tag
