refined build pipeline configuration; v. 0.95

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -28,6 +28,7 @@ services:
     volumes:
       - "~/Projects/goggles_deploy/db.prod:/var/lib/mysql"
       - "~/Projects/goggles_deploy/backups:/app/db/dump"
+      - "~/Projects/goggles_deploy/log.prod/api:/app/log"
       - "~/Projects/goggles_deploy/master-api.key:/app/config/master.key"
 
 networks:
