--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -67,7 +67,7 @@ RUN yarn install --check-files
 # Keep the version argument at the end to avoid early cache miss during builds:
 ARG TAG
 ENV TAG=${TAG:-latest}
-RUN echo 'Version: $TAG'
+RUN echo "Version: $TAG"
 LABEL AUTHOR=steve.alloro@gmail.com VERSION=$TAG
 
 ENTRYPOINT ["./entrypoints/docker.dev.sh"]
