added enpoints, specs & blueprints for UserWorkshop entities, CategoryType, ImportQueue & APIDailyUse; rel. 0.2.18

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -43,6 +43,7 @@ Metrics/ClassLength:
   Max: 120
   Exclude:
     - 'app/api/goggles/meeting_reservations_api.rb'
+    - 'app/api/goggles/user_results_api.rb'
 
 Metrics/CyclomaticComplexity:
   Exclude:
