--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -61,6 +61,33 @@ Metrics/PerceivedComplexity:
   Exclude:
     - 'bin/bundle'
 
+# Configuration parameters: EnforcedStyle, AllowToTime.
+# SupportedStyles: strict, flexible
+Rails/Date:
+  Exclude:
+    - 'spec/support/shared_api_response_behaviors.rb'
+
+RSpec/ExpectInHook:
+  Enabled: false
+
+RSpec/ExampleLength:
+  Max: 20
+
+# Configuration parameters: Include, CustomTransform, IgnoreMethods, SpecSuffixOnly.
+# Include: **/*_spec*rb*, **/spec/**/*
+RSpec/FilePath:
+  Exclude:
+    - 'spec/performances/swimmers_api_spec.rb'
+
+RSpec/MultipleExpectations:
+  Enabled: false
+
+RSpec/MultipleMemoizedHelpers:
+  Max: 18
+
+RSpec/NestedGroups:
+  Max: 5
+
 Style/ClassAndModuleChildren:
   Exclude:
   - 'api/**/*'
