ordering by DESC id for some entities (meetings, badges, affiliations, ...); minor filtering parameters adjust for some endpoints; v. 0.4.06

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -47,6 +47,8 @@ Metrics/BlockLength:
 Metrics/ClassLength:
   Max: 120
   Exclude:
+    - 'app/api/goggles/calendars_api.rb'
+    - 'app/api/goggles/meetings_api.rb'
     - 'app/api/goggles/meeting_reservations_api.rb'
     - 'app/api/goggles/user_results_api.rb'
 
