increased the max_allowed_packet for MariaDB container in docker-compose; v.0.4.08

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,7 +2,10 @@ version: '3.7'
 
 services:
   goggles-db:
-    image: mariadb:10.3.25
+    image: mariadb:latest
+    # Set max_allowed_packet to 512M (this should prevent the "MySQL server has gone away"
+    # issue due to timeout when running huge queries)
+    command: --max_allowed_packet=67108864
     container_name: goggles-db
     env_file:
       - .env
